Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -183,6 +183,16 @@ Error message and password prompt
 
 <li>$:/DefaultTiddlers</li>
 
+<li>$:/GitHub/Branch</li>
+
+<li>$:/GitHub/Filename</li>
+
+<li>$:/GitHub/Path</li>
+
+<li>$:/GitHub/Repo</li>
+
+<li>$:/GitHub/Username</li>
+
 <li>$:/isEncrypted</li>
 
 <li>$:/language</li>
@@ -218,6 +228,8 @@ Error message and password prompt
 <li>$:/state/plugin-info--896887961-$:/plugins/tiddlywiki/menubar</li>
 
 <li>$:/state/plugin-info--896887961-$:/plugins/tiddlywiki/menubar--331413611</li>
+
+<li>$:/state/sidebar</li>
 
 <li>$:/state/tab--1963855381</li>
 
@@ -463,6 +475,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>$:/themes/tiddlywiki/vanilla/metrics/sidebarwidth</li>
+
 <li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
 
 <li>$:/view</li>
@@ -525,20 +539,20 @@ Error message and password prompt
 <div created="20200930090431455" creator="개나리✨" modified="20200930090433784" modifier="개나리✨" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/hamburger">
 <pre>show</pre>
 </div>
-<div created="20200930090442326" creator="개나리✨" modified="20201016141514803" modifier="개나리✨" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/pagecontrols">
+<div created="20200930090442326" creator="개나리✨" modified="20201016143508564" modifier="개나리✨" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/pagecontrols">
 <pre>hide</pre>
 </div>
 <div created="20200930090438404" creator="개나리✨" modified="20201016141516718" modifier="개나리✨" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/server">
 <pre>hide</pre>
 </div>
-<div created="20200930051729801" creator="개나리✨" modified="20201016141523819" modifier="개나리✨" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/sidebar">
+<div created="20200930051729801" creator="개나리✨" modified="20201016143501538" modifier="개나리✨" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/sidebar">
 <pre>hide</pre>
 </div>
-<div created="20200930090425533" creator="개나리✨" modified="20201016141530012" modifier="개나리✨" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/topleftbar">
-<pre>hide</pre>
+<div created="20200930090425533" creator="개나리✨" modified="20201016143505281" modifier="개나리✨" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/topleftbar">
+<pre>show</pre>
 </div>
-<div created="20200930051736455" creator="개나리✨" modified="20201016141518996" modifier="개나리✨" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/toprightbar">
-<pre>hide</pre>
+<div created="20200930051736455" creator="개나리✨" modified="20201016143447061" modifier="개나리✨" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/toprightbar">
+<pre>show</pre>
 </div>
 <div created="20200930051438920" creator="개나리✨" modified="20200930051438920" modifier="개나리✨" title="$:/config/Tiddlers/TitleLinks">
 <pre>yes</pre>
@@ -9928,6 +9942,21 @@ Error message and password prompt
 <div created="20200930051003942" modified="20200930051006153" title="$:/DefaultTiddlers">
 <pre>홈</pre>
 </div>
+<div created="20201016144122373" creator="개나리✨" modified="20201016144122773" modifier="개나리✨" title="$:/GitHub/Branch">
+<pre>main</pre>
+</div>
+<div created="20201016143411583" creator="개나리✨" modified="20201016143411583" modifier="개나리✨" title="$:/GitHub/Filename">
+<pre>index.html</pre>
+</div>
+<div created="20201016144033602" creator="개나리✨" modified="20201016144120973" modifier="개나리✨" title="$:/GitHub/Path">
+<pre>/</pre>
+</div>
+<div created="20201016143356015" creator="개나리✨" modified="20201016143358630" modifier="개나리✨" title="$:/GitHub/Repo">
+<pre>gaenalitrak/gaenali</pre>
+</div>
+<div created="20201016143135687" creator="개나리✨" modified="20201016143138350" modifier="개나리✨" title="$:/GitHub/Username">
+<pre>gaenalitrak</pre>
+</div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
@@ -13420,14 +13449,17 @@ Error message and password prompt
 <div created="20200930051711787" creator="개나리✨" modified="20200930051711787" modifier="개나리✨" title="$:/state/plugin-info--896887961-$:/plugins/tiddlywiki/menubar">
 <pre>yes</pre>
 </div>
-<div created="20200930051714761" creator="개나리✨" modified="20201016142337470" modifier="개나리✨" title="$:/state/plugin-info--896887961-$:/plugins/tiddlywiki/menubar--331413611">
-<pre>contents</pre>
+<div created="20200930051714761" creator="개나리✨" modified="20201016143441515" modifier="개나리✨" title="$:/state/plugin-info--896887961-$:/plugins/tiddlywiki/menubar--331413611">
+<pre>config</pre>
 </div>
-<div created="20200930051221695" creator="개나리✨" modified="20200930052033870" modifier="개나리✨" title="$:/state/tab--1963855381">
-<pre>$:/core/ui/ControlPanel/Toolbars</pre>
+<div created="20201016143452971" creator="개나리✨" modified="20201016143543910" modifier="개나리✨" title="$:/state/sidebar">
+<pre>yes</pre>
 </div>
-<div created="20200930051131316" creator="개나리✨" modified="20200930051131316" modifier="개나리✨" title="$:/state/tab--2112689675">
-<pre>$:/core/ui/ControlPanel/Advanced</pre>
+<div created="20200930051221695" creator="개나리✨" modified="20201016143759494" modifier="개나리✨" title="$:/state/tab--1963855381">
+<pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
+</div>
+<div created="20200930051131316" creator="개나리✨" modified="20201016143754046" modifier="개나리✨" title="$:/state/tab--2112689675">
+<pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
 <div created="20200930051510041" creator="개나리✨" modified="20200930051710343" modifier="개나리✨" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
@@ -13435,17 +13467,17 @@ Error message and password prompt
 <div created="20200930051133076" creator="개나리✨" modified="20200930051136426" modifier="개나리✨" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/Parsing</pre>
 </div>
-<div created="20200930051138872" creator="개나리✨" modified="20200930090406392" modifier="개나리✨" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20200930051138872" creator="개나리✨" modified="20201016143846331" modifier="개나리✨" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200930051448785" creator="개나리✨" modified="20200930051503569" modifier="개나리✨" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/Gitea</pre>
+<div created="20200930051448785" creator="개나리✨" modified="20201016143613621" modifier="개나리✨" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20200930051059670" creator="개나리✨" modified="20201016142212589" modifier="개나리✨" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20200930051057532" creator="개나리✨" modified="20201016142209357" modifier="개나리✨" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/More</pre>
+<div created="20200930051057532" creator="개나리✨" modified="20201016143434814" modifier="개나리✨" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Tools</pre>
 </div>
 <div created="20200930051310307" creator="개나리✨" modified="20200930052038900" modifier="개나리✨" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
@@ -13471,7 +13503,7 @@ Error message and password prompt
 <div created="20200930051104777" creator="ㄱ" modified="20200930051105778" modifier="개나리" title="$:/status/UserName">
 <pre>개나리✨</pre>
 </div>
-<div created="20201016142327546" creator="개나리✨" list="$:/plugins/tiddlywiki/menubar/items/logo 홈" modified="20201016142442118" modifier="개나리✨" title="$:/StoryList">
+<div created="20201016143128185" creator="개나리✨" list="$:/ControlPanel 홈" modified="20201016143128185" modifier="개나리✨" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -13487,19 +13519,19 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///H:/%EB%82%B4%20%EB%93%9C%EB%9D%BC%EC%9D%B4%EB%B8%8C/wiki/gaenalitrak.html&quot;
+            &quot;text&quot;: &quot;https://gaenalitrak.github.io/gaenali/&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;gaenalitrak.github.io&quot;
         },
         &quot;$:/info/url/hostname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/hostname&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;gaenalitrak.github.io&quot;
         },
         &quot;$:/info/url/protocol&quot;: {
             &quot;title&quot;: &quot;$:/info/url/protocol&quot;,
-            &quot;text&quot;: &quot;file:&quot;
+            &quot;text&quot;: &quot;https:&quot;
         },
         &quot;$:/info/url/port&quot;: {
             &quot;title&quot;: &quot;$:/info/url/port&quot;,
@@ -13507,7 +13539,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/H:/%EB%82%B4%20%EB%93%9C%EB%9D%BC%EC%9D%B4%EB%B8%8C/wiki/gaenalitrak.html&quot;
+            &quot;text&quot;: &quot;/gaenali/&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -13515,7 +13547,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;file://&quot;
+            &quot;text&quot;: &quot;https://gaenalitrak.github.io&quot;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
@@ -13527,7 +13559,7 @@ Error message and password prompt
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
-            &quot;text&quot;: &quot;ko-KR&quot;
+            &quot;text&quot;: &quot;ko&quot;
         }
     }
 }</pre>
@@ -14596,6 +14628,9 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
         }
     }
 }</pre>
+</div>
+<div created="20201016143813007" creator="개나리✨" modified="20201016143813007" modifier="개나리✨" title="$:/themes/tiddlywiki/vanilla/metrics/sidebarwidth">
+<pre>150px</pre>
 </div>
 <div created="20200930051348367" creator="개나리✨" modified="20200930051348367" modifier="개나리✨" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fluid-fixed</pre>
