Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -13382,7 +13382,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div caption="메뉴" created="20200930090532914" creator="개나리✨" description="Table of Contents" is-dropdown="yes" modified="20200930091956167" modifier="개나리✨" tags="$:/tags/MenuBar" title="$:/plugins/tiddlywiki/menubar/items/contents">
+<div caption="메뉴" created="20200930090532914" creator="개나리✨" description="Table of Contents" is-dropdown="yes" modified="20201016144430807" modifier="개나리✨" tags="$:/tags/MenuBar" title="$:/plugins/tiddlywiki/menubar/items/contents">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
 &lt;&lt;toc-selective-expandable 'TableOfContents'&gt;&gt;
@@ -13390,6 +13390,7 @@ Error message and password prompt
 [[소개]]
 [[개나리✨ 서비스 안내]]
 [[Power By]]
+[[대하여]]
 ---
 [[개나리✨시작|http://go.gaenali.pe.kr]]
 [[마음의뜰|http://mt.gaenali.pe.kr]]
@@ -13449,8 +13450,8 @@ Error message and password prompt
 <div created="20200930051711787" creator="개나리✨" modified="20200930051711787" modifier="개나리✨" title="$:/state/plugin-info--896887961-$:/plugins/tiddlywiki/menubar">
 <pre>yes</pre>
 </div>
-<div created="20200930051714761" creator="개나리✨" modified="20201016143441515" modifier="개나리✨" title="$:/state/plugin-info--896887961-$:/plugins/tiddlywiki/menubar--331413611">
-<pre>config</pre>
+<div created="20200930051714761" creator="개나리✨" modified="20201016144414845" modifier="개나리✨" title="$:/state/plugin-info--896887961-$:/plugins/tiddlywiki/menubar--331413611">
+<pre>contents</pre>
 </div>
 <div created="20201016143452971" creator="개나리✨" modified="20201016143543910" modifier="개나리✨" title="$:/state/sidebar">
 <pre>yes</pre>
@@ -13467,8 +13468,8 @@ Error message and password prompt
 <div created="20200930051133076" creator="개나리✨" modified="20200930051136426" modifier="개나리✨" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/Parsing</pre>
 </div>
-<div created="20200930051138872" creator="개나리✨" modified="20201016143846331" modifier="개나리✨" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20200930051138872" creator="개나리✨" modified="20201016144411485" modifier="개나리✨" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
 <div created="20200930051448785" creator="개나리✨" modified="20201016143613621" modifier="개나리✨" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -13476,8 +13477,8 @@ Error message and password prompt
 <div created="20200930051059670" creator="개나리✨" modified="20201016142212589" modifier="개나리✨" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20200930051057532" creator="개나리✨" modified="20201016143434814" modifier="개나리✨" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Tools</pre>
+<div created="20200930051057532" creator="개나리✨" modified="20201016144356379" modifier="개나리✨" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div created="20200930051310307" creator="개나리✨" modified="20200930052038900" modifier="개나리✨" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
@@ -13503,7 +13504,7 @@ Error message and password prompt
 <div created="20200930051104777" creator="ㄱ" modified="20200930051105778" modifier="개나리" title="$:/status/UserName">
 <pre>개나리✨</pre>
 </div>
-<div created="20201016143128185" creator="개나리✨" list="$:/ControlPanel 홈" modified="20201016143128185" modifier="개나리✨" title="$:/StoryList">
+<div created="20201016143128185" creator="개나리✨" list="[[Power By]] $:/ControlPanel $:/plugins/tiddlywiki/menubar/items/contents 홈 [[개나리✨ 서비스 안내]]" modified="20201016144416811" modifier="개나리✨" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
