Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -483,6 +483,8 @@ Error message and password prompt
 
 <li>개나리✨ 서비스 안내</li>
 
+<li>대하여</li>
+
 <li>소개</li>
 
 <li>티들리 위키의 문법</li>
@@ -13504,7 +13506,7 @@ Error message and password prompt
 <div created="20200930051104777" creator="ㄱ" modified="20200930051105778" modifier="개나리" title="$:/status/UserName">
 <pre>개나리✨</pre>
 </div>
-<div created="20201016143128185" creator="개나리✨" list="[[Power By]] $:/ControlPanel $:/plugins/tiddlywiki/menubar/items/contents 홈 [[개나리✨ 서비스 안내]]" modified="20201016144416811" modifier="개나리✨" title="$:/StoryList">
+<div created="20201016143128185" creator="개나리✨" list="[[Power By]] $:/ControlPanel $:/plugins/tiddlywiki/menubar/items/contents 대하여 홈 [[개나리✨ 서비스 안내]]" modified="20201016144434134" modifier="개나리✨" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -14653,6 +14655,16 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 # Google Drive에 개나리✨의 파일을 업로드 합니다.
 # 파일이 포함된 폴더를 공유하고 URL을 추출합니다.
 # DNSZi에 가서 해당 URL과 개나리✨ URL을 연동합니다.</pre>
+</div>
+<div created="20201016144437886" creator="개나리✨" modified="20201016145156983" modifier="개나리✨" title="대하여">
+<pre>! 이 사이트는 TiddlyWiki로 제작되었습니다.
+! 사이트의 작동 방식에 대한 정보는 [[개나리✨ 서비스 안내]]를 참고하세요.
+
+!개나리✨ 사이트 저작권 관련 정보
+# 이 사이트는 TiddlyWiki 5로 제작되었으며 TiddlyWiki 및 관련 부속(컴포넌트), 플러그인 등에 대한 모든 권리는 TiddlyWiki 및 관련 권리자에게 있습니다.
+# 사이트 자체와 개나리✨ 데이터에 대한 모든 권리는 개나리✨가 보유합니다.
+# 본 사이트를 저장하여 외부에 호스팅하거나 '내보내기' 하여 사용하는 등의 행위를 금지하며 민형사상의 책임을 물을 수 있습니다.
+# 사이트의 데이터 일부 혹은 전부를 합법적으로 사용하고자 하실 경우 사전에 개나리✨와 협의 하셔야 합니다. 통보는 인정되지 않으며 전자우편을 이용하여 개나리✨의 명시적 허락을 받은 경우에만 사용이 가능 합니다. 또한 개나리✨는 허락을 받은 사용의 허락을 취소시킬 권리와 권한을 가지고 있습니다.</pre>
 </div>
 <div created="20200930090635187" creator="개나리✨" modified="20200930091549590" modifier="개나리✨" title="소개">
 <pre>!!! 개나리✨는 진행의 개인 페이지입니다. 그리고 개나리✨의 허브역할을 하고 있습니다.
