Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -14641,20 +14641,18 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200930051225458" creator="개나리✨" modified="20200930051225458" modifier="개나리✨" title="$:/view">
 <pre>pop</pre>
 </div>
-<div created="20200930051754077" creator="개나리✨" modified="20200930092902461" modifier="개나리✨" tags="안내 기본" title="개나리✨ 서비스 안내">
-<pre># 개나리✨는 TiddlyWiki의 5버전으로 제작되었습니다. TiddlyWiki 및 관련 부속에 대한 모든 권리는 TiddlyWiki에서 보유합니다.
-# 사이트에 대한 모든 저작권은 개나리✨가 보유합니다.
-# 이 사이트를 브라우저의 저장(Ctrl + S)등을 이용해 저장하는 행위는 허용되지 않습니다.
-# 이 사이트는 서버측에 저장되어 있으므로 사용자가 편집한 내용은 반영되지 않습니다.
+<div created="20200930051754077" creator="개나리✨" modified="20201016145533075" modifier="개나리✨" tags="안내 기본" title="개나리✨ 서비스 안내">
+<pre># 개나리✨에 대한 저작권 사항은 [[대하여]]를 참고하세요.
+# 이 사이트는 서버측에 저장되어 있습니다. TiddlyWiki의 특성상 사용자에게 사이트 편집이 가능 한 것 처럼 보여지고 있지만 귀하가 편집한 내용은 사이트에 반영되지 않습니다.
 # TiddlyWiki에 대한 정보는 [[링크|https://www.google.com/search?q=%ED%8B%B0%EB%93%A4%EB%A6%AC%EC%9C%84%ED%82%A4&amp;oq=%ED%8B%B0%EB%93%A4%EB%A6%AC%EC%9C%84%ED%82%A4&amp;aqs=chrome.0.69i59j69i65j69i60l3j0l2.2211j0j4&amp;sourceid=chrome&amp;ie=UTF-8]]나 [[링크|https://www.google.com/search?q=Tiddlywiki&amp;oq=Tiddlywiki&amp;aqs=chrome..69i57j69i60j0j69i65j69i59j69i61j0.4791j0j7&amp;sourceid=chrome&amp;ie=UTF-8]] 또는 [[링크|http://tiddlywiki.com]]을 참조하세요.
 
 --- --- --- ---
 
 !!! 개나리✨가 운영되는 방식
-# Windows 10에서 구동되는 TiddlyDesktop으로 개나리✨서비스를 구축합니다.
-# Google Drive에 개나리✨의 파일을 업로드 합니다.
-# 파일이 포함된 폴더를 공유하고 URL을 추출합니다.
-# DNSZi에 가서 해당 URL과 개나리✨ URL을 연동합니다.</pre>
+# GitHub에 개나리✨의 데이터를 입력시킨 TiddlyWiki HTML파일을 업로드 합니다.
+# [[여기|https://opentutorials.org/course/3084/18891]]를 참조하여 GitHub Pages기능과 연동을 시킵니다.
+# 수분 뒤 웹상에 잘 연동이 된것을 확인후 안심을 하며 TiddlyWiki의 설정에 GitHub에 자동 저장을 하기 위한 세팅값을 입력해 줍니다.
+# 개나리✨ 사이트 구축 완료</pre>
 </div>
 <div created="20201016144437886" creator="개나리✨" modified="20201016145156983" modifier="개나리✨" title="대하여">
 <pre>! 이 사이트는 TiddlyWiki로 제작되었습니다.
