Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -16333,12 +16333,12 @@ width:16px;
 }
 &lt;/style&gt;</pre>
 </div>
-<div created="20200930092023457" creator="개나리✨" modified="20200930092425695" modifier="개나리✨" title="Power By">
-<pre>! 개나리✨는 다음과 같은 서비스를 이용하여 운영되고 있습니다. 귀중한 서비스를 만들고 운영해주시는 분들께 감사 드립니다.
+<div created="20200930092023457" creator="개나리✨" modified="20201016145718831" modifier="개나리✨" title="Power By">
+<pre>! 개나리✨는 다음과 같은 서비스를 이용하여 운영되고 있습니다. 귀중한 서비스를 만들고 운영해주시는 분들께 감사 드립니다. 특히 아무런 대가를 바라지 않고 시간과 비용을 들여 프로그램을 개발하여 공개하고 계시는 많은 오픈소스 개발자 분들께 존경을 표하는 바입니다.
 
 # 도메인 : [[가비아|http://gabia.com]]
 # 도메인 관련 서비스(네임서버) : [[DNSZi|http://dnszi.com]]
-# 개나리✨ : 티들리위키에 내용을 구축하여 Google Drive위에서 구동됨
+# 개나리✨ : 티들리위키에 내용을 구축하여 GitHub의 Pages기능(간이 호스팅 기능)을 이용해 구동 됨
 # (구)개나리✨, (구)마음의뜰, (구)미원의뜨락&amp;마음의뜰, (구)미원의 뜨락 - [[티스토리|http://tistory.com]]
 # 마음의 뜰(mt.gaenali.pe.kr) - [[Notion(노션)|http://notion.com]]
 
