Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -13479,8 +13479,8 @@ Error message and password prompt
 <div created="20200930051059670" creator="개나리✨" modified="20201016142212589" modifier="개나리✨" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20200930051057532" creator="개나리✨" modified="20201016144356379" modifier="개나리✨" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/More</pre>
+<div created="20200930051057532" creator="개나리✨" modified="20201016145813613" modifier="개나리✨" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20200930051310307" creator="개나리✨" modified="20200930052038900" modifier="개나리✨" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
@@ -13506,7 +13506,7 @@ Error message and password prompt
 <div created="20200930051104777" creator="ㄱ" modified="20200930051105778" modifier="개나리" title="$:/status/UserName">
 <pre>개나리✨</pre>
 </div>
-<div created="20201016143128185" creator="개나리✨" list="[[Power By]] $:/ControlPanel $:/plugins/tiddlywiki/menubar/items/contents 대하여 홈 [[개나리✨ 서비스 안내]]" modified="20201016144434134" modifier="개나리✨" title="$:/StoryList">
+<div created="20201016143128185" creator="개나리✨" list="[[Power By]] 홈" modified="20201016144434134" modifier="개나리✨" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -16333,8 +16333,9 @@ width:16px;
 }
 &lt;/style&gt;</pre>
 </div>
-<div created="20200930092023457" creator="개나리✨" modified="20201016145718831" modifier="개나리✨" title="Power By">
-<pre>! 개나리✨는 다음과 같은 서비스를 이용하여 운영되고 있습니다. 귀중한 서비스를 만들고 운영해주시는 분들께 감사 드립니다. 특히 아무런 대가를 바라지 않고 시간과 비용을 들여 프로그램을 개발하여 공개하고 계시는 많은 오픈소스 개발자 분들께 존경을 표하는 바입니다.
+<div created="20200930092023457" creator="개나리✨" modified="20201016145727851" modifier="개나리✨" title="Power By">
+<pre>! 개나리✨는 다음과 같은 서비스를 이용하여 운영되고 있습니다. 귀중한 서비스를 만들고 운영해주시는 분들께 감사 드립니다.
+특히 아무런 대가를 바라지 않고 시간과 비용을 들여 프로그램을 개발하여 공개하고 계시는 많은 오픈소스 개발자 분들께 존경을 표하는 바입니다.
 
 # 도메인 : [[가비아|http://gabia.com]]
 # 도메인 관련 서비스(네임서버) : [[DNSZi|http://dnszi.com]]
