Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@ Error message and password prompt
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/advanced-search</li>
 
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/control-panel</li>
+
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/export-page</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/more-page-actions</li>
@@ -523,20 +525,23 @@ Error message and password prompt
 <div created="20200930051328323" creator="개나리✨" modified="20200930051328323" modifier="개나리✨" title="$:/config/EditorToolbarButtons/Visibility/$:/core/ui/EditorToolbar/heading-6">
 <pre>show</pre>
 </div>
-<div created="20200930051321741" creator="개나리✨" modified="20200930051321741" modifier="개나리✨" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/advanced-search">
-<pre>show</pre>
+<div created="20200930051321741" creator="개나리✨" modified="20201016150000256" modifier="개나리✨" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/advanced-search">
+<pre>hide</pre>
 </div>
-<div created="20201016141425258" creator="개나리✨" modified="20201016141425258" modifier="개나리✨" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/export-page">
-<pre>show</pre>
+<div created="20201016150008703" creator="개나리✨" modified="20201016150008703" modifier="개나리✨" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/control-panel">
+<pre>hide</pre>
+</div>
+<div created="20201016141425258" creator="개나리✨" modified="20201016150002283" modifier="개나리✨" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/export-page">
+<pre>hide</pre>
 </div>
 <div created="20201016141431602" creator="개나리✨" modified="20201016141431602" modifier="개나리✨" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/more-page-actions">
 <pre>show</pre>
 </div>
-<div created="20200930051315399" creator="개나리✨" modified="20200930051316444" modifier="개나리✨" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-tiddler">
-<pre>show</pre>
+<div created="20200930051315399" creator="개나리✨" modified="20201016150015722" modifier="개나리✨" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-tiddler">
+<pre>hide</pre>
 </div>
-<div created="20201016141430574" creator="개나리✨" modified="20201016141430574" modifier="개나리✨" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/refresh">
-<pre>show</pre>
+<div created="20201016141430574" creator="개나리✨" modified="20201016150019940" modifier="개나리✨" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/refresh">
+<pre>hide</pre>
 </div>
 <div created="20200930090431455" creator="개나리✨" modified="20200930090433784" modifier="개나리✨" title="$:/config/plugins/menubar/MenuItems/Visibility/$:/plugins/tiddlywiki/menubar/items/hamburger">
 <pre>show</pre>
@@ -13479,8 +13484,8 @@ Error message and password prompt
 <div created="20200930051059670" creator="개나리✨" modified="20201016142212589" modifier="개나리✨" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20200930051057532" creator="개나리✨" modified="20201016145813613" modifier="개나리✨" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20200930051057532" creator="개나리✨" modified="20201016145957539" modifier="개나리✨" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Tools</pre>
 </div>
 <div created="20200930051310307" creator="개나리✨" modified="20200930052038900" modifier="개나리✨" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
@@ -13506,7 +13511,7 @@ Error message and password prompt
 <div created="20200930051104777" creator="ㄱ" modified="20200930051105778" modifier="개나리" title="$:/status/UserName">
 <pre>개나리✨</pre>
 </div>
-<div created="20201016143128185" creator="개나리✨" list="[[Power By]] 홈" modified="20201016144434134" modifier="개나리✨" title="$:/StoryList">
+<div created="20201016143128185" creator="개나리✨" list="홈" modified="20201016144434134" modifier="개나리✨" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
