--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/DefaultColourMappings/menubar-background</li>
+
 <li>$:/config/DownloadSaver/AutoSave</li>
 
 <li>$:/config/EditorToolbarButtons/Visibility/$:/core/ui/EditorToolbar/heading-4</li>
@@ -513,6 +515,9 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20201016150145007" creator="개나리✨" modified="20201016150146602" modifier="개나리✨" title="$:/config/DefaultColourMappings/menubar-background">
+<pre>#ffff00</pre>
+</div>
 <div created="20200930051452414" creator="개나리✨" modified="20200930051452414" modifier="개나리✨" title="$:/config/DownloadSaver/AutoSave">
 <pre>yes</pre>
 </div>
@@ -13484,8 +13489,8 @@ Error message and password prompt
 <div created="20200930051059670" creator="개나리✨" modified="20201016142212589" modifier="개나리✨" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20200930051057532" creator="개나리✨" modified="20201016145957539" modifier="개나리✨" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Tools</pre>
+<div created="20200930051057532" creator="개나리✨" modified="20201016150028882" modifier="개나리✨" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20200930051310307" creator="개나리✨" modified="20200930052038900" modifier="개나리✨" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
@@ -13511,7 +13516,7 @@ Error message and password prompt
 <div created="20200930051104777" creator="ㄱ" modified="20200930051105778" modifier="개나리" title="$:/status/UserName">
 <pre>개나리✨</pre>
 </div>
-<div created="20201016143128185" creator="개나리✨" list="홈" modified="20201016144434134" modifier="개나리✨" title="$:/StoryList">
+<div created="20201016143128185" creator="개나리✨" list="$:/ControlPanel $:/config/DefaultColourMappings/menubar-background $:/plugins/tiddlywiki/menubar/config 홈" modified="20201016150040720" modifier="개나리✨" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
