Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@ Error message and password prompt
 
 <li>$:/config/DefaultColourMappings/menubar-background</li>
 
+<li>$:/config/DefaultColourMappings/menubar-foreground</li>
+
 <li>$:/config/DownloadSaver/AutoSave</li>
 
 <li>$:/config/EditorToolbarButtons/Visibility/$:/core/ui/EditorToolbar/heading-4</li>
@@ -515,8 +517,11 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
-<div created="20201016150145007" creator="개나리✨" modified="20201016150146602" modifier="개나리✨" title="$:/config/DefaultColourMappings/menubar-background">
-<pre>#ffff00</pre>
+<div created="20201016150145007" creator="개나리✨" modified="20201016150303654" modifier="개나리✨" title="$:/config/DefaultColourMappings/menubar-background">
+<pre>#FFFF00</pre>
+</div>
+<div created="20201016150211240" creator="개나리✨" modified="20201016150212430" modifier="개나리✨" title="$:/config/DefaultColourMappings/menubar-foreground">
+<pre>#000000</pre>
 </div>
 <div created="20200930051452414" creator="개나리✨" modified="20200930051452414" modifier="개나리✨" title="$:/config/DownloadSaver/AutoSave">
 <pre>yes</pre>
@@ -13516,7 +13521,7 @@ Error message and password prompt
 <div created="20200930051104777" creator="ㄱ" modified="20200930051105778" modifier="개나리" title="$:/status/UserName">
 <pre>개나리✨</pre>
 </div>
-<div created="20201016143128185" creator="개나리✨" list="$:/ControlPanel $:/config/DefaultColourMappings/menubar-background $:/plugins/tiddlywiki/menubar/config 홈" modified="20201016150040720" modifier="개나리✨" title="$:/StoryList">
+<div created="20201016143128185" creator="개나리✨" list="$:/ControlPanel $:/config/DefaultColourMappings/menubar-foreground $:/config/DefaultColourMappings/menubar-background $:/plugins/tiddlywiki/menubar/config 홈" modified="20201016150150660" modifier="개나리✨" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
