--- a/index.html
+++ b/index.html
@@ -523,8 +523,8 @@ Error message and password prompt
 <div created="20201016150211240" creator="개나리✨" modified="20201016150212430" modifier="개나리✨" title="$:/config/DefaultColourMappings/menubar-foreground">
 <pre>#000000</pre>
 </div>
-<div created="20200930051452414" creator="개나리✨" modified="20200930051452414" modifier="개나리✨" title="$:/config/DownloadSaver/AutoSave">
-<pre>yes</pre>
+<div created="20200930051452414" creator="개나리✨" modified="20201016150340004" modifier="개나리✨" title="$:/config/DownloadSaver/AutoSave">
+<pre>no</pre>
 </div>
 <div created="20200930051329302" creator="개나리✨" modified="20200930051329302" modifier="개나리✨" title="$:/config/EditorToolbarButtons/Visibility/$:/core/ui/EditorToolbar/heading-4">
 <pre>show</pre>
@@ -13485,11 +13485,11 @@ Error message and password prompt
 <div created="20200930051133076" creator="개나리✨" modified="20200930051136426" modifier="개나리✨" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/Parsing</pre>
 </div>
-<div created="20200930051138872" creator="개나리✨" modified="20201016144411485" modifier="개나리✨" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20200930051138872" creator="개나리✨" modified="20201016150322515" modifier="개나리✨" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200930051448785" creator="개나리✨" modified="20201016143613621" modifier="개나리✨" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+<div created="20200930051448785" creator="개나리✨" modified="20201016150323632" modifier="개나리✨" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/DownloadSaver</pre>
 </div>
 <div created="20200930051059670" creator="개나리✨" modified="20201016142212589" modifier="개나리✨" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
@@ -13521,7 +13521,7 @@ Error message and password prompt
 <div created="20200930051104777" creator="ㄱ" modified="20200930051105778" modifier="개나리" title="$:/status/UserName">
 <pre>개나리✨</pre>
 </div>
-<div created="20201016143128185" creator="개나리✨" list="$:/ControlPanel $:/config/DefaultColourMappings/menubar-foreground $:/config/DefaultColourMappings/menubar-background $:/plugins/tiddlywiki/menubar/config 홈" modified="20201016150150660" modifier="개나리✨" title="$:/StoryList">
+<div created="20201016143128185" creator="개나리✨" list="$:/ControlPanel 홈" modified="20201016150320201" modifier="개나리✨" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
