Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -181,6 +181,8 @@ Error message and password prompt
 
 <li>$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/edit</li>
 
+<li>$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/info</li>
+
 <li>$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/more-tiddler-actions</li>
 
 <li>$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/permalink</li>
@@ -236,6 +238,8 @@ Error message and password prompt
 <li>$:/state/plugin-info--896887961-$:/plugins/tiddlywiki/menubar--331413611</li>
 
 <li>$:/state/sidebar</li>
+
+<li>$:/state/tab--1936963165</li>
 
 <li>$:/state/tab--1963855381</li>
 
@@ -576,6 +580,9 @@ Error message and password prompt
 </div>
 <div created="20200930051301769" creator="개나리✨" modified="20200930052042573" modifier="개나리✨" title="$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/edit">
 <pre>show</pre>
+</div>
+<div created="20201016151032126" creator="개나리✨" modified="20201016151042463" modifier="개나리✨" title="$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/info">
+<pre>hide</pre>
 </div>
 <div created="20200930051300050" creator="개나리✨" modified="20200930051300050" modifier="개나리✨" title="$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/more-tiddler-actions">
 <pre>hide</pre>
@@ -13473,8 +13480,11 @@ Error message and password prompt
 <div created="20201016143452971" creator="개나리✨" modified="20201016143543910" modifier="개나리✨" title="$:/state/sidebar">
 <pre>yes</pre>
 </div>
-<div created="20200930051221695" creator="개나리✨" modified="20201016143759494" modifier="개나리✨" title="$:/state/tab--1963855381">
-<pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
+<div created="20201016151035686" creator="개나리✨" modified="20201016151040836" modifier="개나리✨" title="$:/state/tab--1936963165">
+<pre>$:/core/ui/TiddlerInfo/References</pre>
+</div>
+<div created="20200930051221695" creator="개나리✨" modified="20201016151011881" modifier="개나리✨" title="$:/state/tab--1963855381">
+<pre>$:/core/ui/ControlPanel/Toolbars</pre>
 </div>
 <div created="20200930051131316" creator="개나리✨" modified="20201016143754046" modifier="개나리✨" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
@@ -13485,8 +13495,8 @@ Error message and password prompt
 <div created="20200930051133076" creator="개나리✨" modified="20200930051136426" modifier="개나리✨" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/Parsing</pre>
 </div>
-<div created="20200930051138872" creator="개나리✨" modified="20201016150322515" modifier="개나리✨" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20200930051138872" creator="개나리✨" modified="20201016151009016" modifier="개나리✨" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
 <div created="20200930051448785" creator="개나리✨" modified="20201016150323632" modifier="개나리✨" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/DownloadSaver</pre>
@@ -13497,8 +13507,8 @@ Error message and password prompt
 <div created="20200930051057532" creator="개나리✨" modified="20201016150028882" modifier="개나리✨" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Open</pre>
 </div>
-<div created="20200930051310307" creator="개나리✨" modified="20200930052038900" modifier="개나리✨" title="$:/state/tabs/controlpanel/toolbars-1345989671">
-<pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
+<div created="20200930051310307" creator="개나리✨" modified="20201016151055126" modifier="개나리✨" title="$:/state/tabs/controlpanel/toolbars-1345989671">
+<pre>$:/core/ui/ControlPanel/Toolbars/EditToolbar</pre>
 </div>
 <div created="20201016142215522" creator="개나리✨" modified="20201016142215522" modifier="개나리✨" title="$:/state/tree/$:/plugins/">
 <pre>show</pre>
