Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -13531,7 +13531,7 @@ Error message and password prompt
 <div created="20200930051104777" creator="ㄱ" modified="20200930051105778" modifier="개나리" title="$:/status/UserName">
 <pre>개나리✨</pre>
 </div>
-<div created="20201016143128185" creator="개나리✨" list="$:/ControlPanel 홈" modified="20201016150320201" modifier="개나리✨" title="$:/StoryList">
+<div created="20201016143128185" creator="개나리✨" list="홈" modified="20201016150320201" modifier="개나리✨" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -15528,10 +15528,11 @@ width:16px;
 }
 &lt;/style&gt;</pre>
 </div>
-<div created="20200930051012304" creator="개나리✨" modified="20200930064214296" modifier="개나리✨" tags="기본 홈" title="홈">
-<pre>! 미원의 개인 페이지 그리고 개나리✨허브인 개나리✨에 오신것을 환영합니다
+<div created="20200930051012304" creator="개나리✨" modified="20201016151903670" modifier="개나리✨" tags="기본 홈" title="홈">
+<pre>! 개나리✨ [[(오픈알파버전)|https://ko.wikipedia.org/wiki/%EC%95%8C%ED%8C%8C_%EB%B2%84%EC%A0%84]]
+!! 미원의 개인 페이지 그리고 개나리✨허브
  
-!! 상단이나 오른쪽의 메뉴를 이용하시면 원하시는 서비스를 쉽게 이용 하실 수 있습니다.
+!!! 상단이나 오른쪽의 메뉴를 이용하시면 원하시는 서비스를 쉽게 이용 하실 수 있습니다.
 
 ---
 이 사이트는 TiddlyWiki로 제작되었습니다. 자세한 사항은 [[개나리✨ 서비스 안내]]를 참고하세요.</pre>
