Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -497,6 +497,8 @@ Error message and password prompt
 
 <li>소개</li>
 
+<li>오픈알파</li>
+
 <li>티들리 위키의 문법</li>
 
 <li>홈</li>
@@ -13531,7 +13533,7 @@ Error message and password prompt
 <div created="20200930051104777" creator="ㄱ" modified="20200930051105778" modifier="개나리" title="$:/status/UserName">
 <pre>개나리✨</pre>
 </div>
-<div created="20201016143128185" creator="개나리✨" list="홈" modified="20201016150320201" modifier="개나리✨" title="$:/StoryList">
+<div created="20201016143128185" creator="개나리✨" list="오픈알파 홈" modified="20201016150320201" modifier="개나리✨" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -14703,6 +14705,9 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 * 활동 : 태화샘솟는집, 성락침례교회 교회개혁협의회
 * 이메일 주소 : (허진행 개인) ｍｉｗｏｎ＠ｇａｅｎａｌｉ.ｐｅ.ｋｒ // (작가 미원 및 개나리 뜨락, 마음의 뜰) help＠ｇａｅｎａｌｉ.ｐｅ.ｋｒ
 * facebook : @miwonheo (거의 하지 않습니다.)</pre>
+</div>
+<div created="20201016151935780" creator="개나리✨" modified="20201016152031172" modifier="개나리✨" tags="" title="오픈알파">
+<pre>이 사이트는 불특정 다수에게 공개되어 테스트되는 오픈 방식의 [[알파버전|https://ko.wikipedia.org/wiki/%EC%95%8C%ED%8C%8C_%EB%B2%84%EC%A0%84]]입니다. 온전히 제작이 완료된 사이트가 아니오니 이용에 참고하시기 바랍니다.</pre>
 </div>
 <div caption="Markup" created="20200930084117202" creator="개나리✨" icon="$:/core/images/right-arrow" list="bold italics bold-italics underline strikethrough superscript subscript dashes headings horizontal-rules code monospaced-codeblock hard-linebreaks paragraphs blockquotes unordered-lists ordered-lists definition-lists mixed-lists css-classes internal-links wiki-links external-links filesystem-links external-links-forced images external-images attribute-transclusion css-class-wrappers styled-wrappers combined-style-wrappers inline-styles tables html-elements html-element-attributes multiline-nested-html transclusion macros typed-blocks" menu="main" menu-icon="{{$:/core/images/right-arrow}}" modified="20200930090303661" modifier="개나리✨" order="2" summary="a destillation of [[WikiText|http://tiddlywiki.com/#WikiText]] formatting in tw5" tags="안내 티들리위키" title="티들리 위키의 문법" type="text/vnd.tiddlywiki">
 <pre>티들리 위키는 소프트웨어 방식의 위키위키가 아니기에 일반적인 위키서비스과는 문법이 다소 다릅니다. 아래의 정보를 참고하시면 티들리 위키의 문법에 대한 자세한 정보를 볼 수 있습니다.(이 정보는 [[링크|https://tobibeer.github.io/tb5/#Draft%20of%20'Markup'|]]의 내용을 한글화 한 것임을 밝힙니다.)
