--- a/index.html
+++ b/index.html
@@ -9965,8 +9965,9 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200930051003942" modified="20200930051006153" title="$:/DefaultTiddlers">
-<pre>홈</pre>
+<div created="20200930051003942" creator="개나리✨" modified="20201016152047141" modifier="개나리✨" title="$:/DefaultTiddlers">
+<pre>오픈알파
+홈</pre>
 </div>
 <div created="20201016144122373" creator="개나리✨" modified="20201016144122773" modifier="개나리✨" title="$:/GitHub/Branch">
 <pre>main</pre>
@@ -13497,8 +13498,8 @@ Error message and password prompt
 <div created="20200930051133076" creator="개나리✨" modified="20200930051136426" modifier="개나리✨" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/Parsing</pre>
 </div>
-<div created="20200930051138872" creator="개나리✨" modified="20201016151009016" modifier="개나리✨" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Appearance</pre>
+<div created="20200930051138872" creator="개나리✨" modified="20201016152037816" modifier="개나리✨" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20200930051448785" creator="개나리✨" modified="20201016150323632" modifier="개나리✨" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/DownloadSaver</pre>
@@ -13533,7 +13534,7 @@ Error message and password prompt
 <div created="20200930051104777" creator="ㄱ" modified="20200930051105778" modifier="개나리" title="$:/status/UserName">
 <pre>개나리✨</pre>
 </div>
-<div created="20201016143128185" creator="개나리✨" list="오픈알파 홈" modified="20201016150320201" modifier="개나리✨" title="$:/StoryList">
+<div created="20201016143128185" creator="개나리✨" list="오픈알파 홈" modified="20201016152035982" modifier="개나리✨" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
