Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -493,6 +493,8 @@ Error message and password prompt
 
 <li>개나리✨ 서비스 안내</li>
 
+<li>공지사항</li>
+
 <li>대하여</li>
 
 <li>소개</li>
@@ -13498,11 +13500,11 @@ Error message and password prompt
 <div created="20200930051133076" creator="개나리✨" modified="20200930051136426" modifier="개나리✨" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/Parsing</pre>
 </div>
-<div created="20200930051138872" creator="개나리✨" modified="20201016152037816" modifier="개나리✨" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20200930051138872" creator="개나리✨" modified="20201017235041421" modifier="개나리✨" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200930051448785" creator="개나리✨" modified="20201016150323632" modifier="개나리✨" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/DownloadSaver</pre>
+<div created="20200930051448785" creator="개나리✨" modified="20201017235042551" modifier="개나리✨" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20200930051059670" creator="개나리✨" modified="20201016142212589" modifier="개나리✨" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
@@ -13534,7 +13536,7 @@ Error message and password prompt
 <div created="20200930051104777" creator="ㄱ" modified="20200930051105778" modifier="개나리" title="$:/status/UserName">
 <pre>개나리✨</pre>
 </div>
-<div created="20201016143128185" creator="개나리✨" list="오픈알파 홈" modified="20201016152035982" modifier="개나리✨" title="$:/StoryList">
+<div created="20201017235034121" creator="개나리✨" list="공지사항 오픈알파 홈" modified="20201017235034121" modifier="개나리✨" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -14681,6 +14683,9 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 # [[여기|https://opentutorials.org/course/3084/18891]]를 참조하여 GitHub Pages기능과 연동을 시킵니다.
 # 수분 뒤 웹상에 잘 연동이 된것을 확인후 안심을 하며 TiddlyWiki의 설정에 GitHub에 자동 저장을 하기 위한 세팅값을 입력해 줍니다.
 # 개나리✨ 사이트 구축 완료</pre>
+</div>
+<div created="20201017235707518" creator="개나리✨" modified="20201018000128120" modifier="개나리✨" tags="" title="공지사항">
+<pre>개나리✨의 모든 알림을 확인 하실 수 있으며 알림은 공지가 작성된 시간 순으로 표시됩니다. (※ 마음의뜰 공지사항은 해당 사이트에서 확인하시기 바랍니다.)</pre>
 </div>
 <div created="20201016144437886" creator="개나리✨" modified="20201016145156983" modifier="개나리✨" title="대하여">
 <pre>! 이 사이트는 TiddlyWiki로 제작되었습니다.
